--- a/bonch-app/package.json
+++ b/bonch-app/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.3",
+    "mysql": "^2.18.1",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
