--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^8.8.3",
     "mysql": "^2.18.1",
     "node-telegram-bot-api": "^0.66.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
